cmake_minimum_required(VERSION 3.28)
project(dg)

set(CMAKE_CXX_STANDARD 17)

add_executable(dg
        main.cpp
        递归/回文链表.cpp
        递归/消除游戏.cpp
        labuladong/双指针/环形链表.cpp
        labuladong/双指针/环形链表2.cpp
        labuladong/双指针/相交链表.cpp
        labuladong/双指针/删除倒数第N个结点.cpp
        labuladong/双指针/合并K个有序链表.cpp
        labuladong/双指针/分隔链表.cpp
        labuladong/双指针/两数之和.cpp
        labuladong/双指针/移除元素.cpp
        #        栈/基本计算器.cpp
#        递归/猴子碰撞的方法数.cpp
#        回溯/电话号码回溯.cpp
        #        递归/汉诺塔.cpp
#        递归/合并两个有序链表.cpp
#        递归/反转链表.cpp
#        递归/两两交换链表中的结点.cpp
#        "递归/Pow(x,n).cpp"
#        二叉深搜/计算布尔二叉树的值.cpp
#        二叉深搜/二叉树剪.cpp
#        二叉深搜/验证二叉树的后序遍历序列.cpp
#        二叉深搜/二叉搜索树中第K小的元素.cpp
#        lc周赛/406/交换后字典序最小的字符串.cpp
#        二叉深搜/二叉树的所有路径.cpp
#        递归/两数相加.cpp
#        递归/重排链表.cpp
#        递归/K个一组翻转链表.cpp
)
