cmake_minimum_required(VERSION 3.28)
project(homework1)

set(CMAKE_CXX_STANDARD 14)

add_executable(homework1
        lint460.cpp
        Comm.h
        lint424逆波兰.cpp
        1369.cpp
        lint425.cpp
        leet20.cpp
        1190.cpp
        leetcode496.cpp
        leet217.cpp
        leet3.cpp
        lint217.cpp
        lint221.cpp
        lint1181.cpp
        #        main.cpp
)
